--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,9 +18,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install dependencies
-      run: |
-      sudo apt -y install libeigen3-dev 
-      sudo pip install pybind11
+      run: sudo apt -y install libeigen3-dev && sudo pip install pybind11
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
