--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt -y install libeigen3-dev python3-pytest python3-numpy python3-flake8 python3-sympy
+        cd test && python3 -m flake8 . && cd ..
         wget -nc --quiet https://github.com/pybind/pybind11/archive/v2.5.0.tar.gz
         tar -xf v2.5.0.tar.gz
         cd pybind11-2.5.0
