Add Crouzeix-Raviart element (#8)
* Add CR element

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -27,7 +27,7 @@ if (HAVE_NO_MULTLINE)
 endif()
 
 # Executable
-add_library(tab SHARED polynomial-set.cpp lagrange.cpp quadrature.cpp nedelec.cpp raviart-thomas.cpp finite-element.cpp tp.cpp cell.cpp regge.cpp)
+add_library(tab SHARED polynomial-set.cpp lagrange.cpp quadrature.cpp nedelec.cpp raviart-thomas.cpp finite-element.cpp tp.cpp cell.cpp regge.cpp crouzeix-raviart.cpp)
 
 find_package(pybind11 REQUIRED CONFIG HINTS ${PYBIND11_DIR} ${PYBIND11_ROOT}
   $ENV{PYBIND11_DIR} $ENV{PYBIND11_ROOT})
