Add abstract integral moment functions (#9)
* Add tests against results computed symbolically for Lagrange, Nedelec and RT

* Use Lagrange spaces to define Nedelec spaces

* Added abstract integral moment and tangent integral moment generating functions

* remove reducing of quadrature order

* dynamic size entity

* started implementing integral moments for Nedelec in 3D

* replace 2 with tdim

* make integral moment generationa more correct

* return matrix, rather than passing reference to block in

* better (but not yet perfect) test

* debug

* normalise face tangents

* flake8 fixes

* add Nedelec sympy test

* remove symbolic hardcoded test

* add __init__ so nedelec test can import lagrange

* add init

* flake

* added documentation to integral moment methods

* todo

* get cell type not tdim from finite element

* get psize from polynomial set, not input

* doc

* celltype input into psize

Co-authored-by: Chris Richardson <chris@bpi.cam.ac.uk>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.pyc
 *~
 *.so
 doc/html/*
@@ -6,3 +7,6 @@ cpp/Makefile
 cpp/CMakeCache.txt
 cpp/CMakeFiles/*
 cpp/cmake_install.cmake
+build/*
+
+.*.swp
