--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,8 +19,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt -y install libeigen3-dev python3-pytest python3-numpy python3-flake8 python3-sympy
-        cd test && python3 -m flake8 . && cd ..
+        sudo apt-get -y install libeigen3-dev python3-pytest python3-numpy python3-flake8 python3-sympy
+        pwd
         wget -nc --quiet https://github.com/pybind/pybind11/archive/v2.5.0.tar.gz
         tar -xf v2.5.0.tar.gz
         cd pybind11-2.5.0
@@ -52,6 +52,14 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
-        cd test
         export PYTHONPATH=${{runner.workspace}}/build
-        python3 -m pytest .
+        python3 -m pytest test/
+
+  style-checks:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install flake8
+      run: sudo apt-get -y install python3-flake8
+    - name: Flake8 checks on tests
+      run: python3 -m flake8 test/
