--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,14 +12,14 @@ jobs:
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/actions/configuring-and-managing-workflows/configuring-a-workflow#configuring-a-build-matrix
-    runs-on: ubuntu-latest
+    runs-on: ubuntu:20.04
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Install dependencies
       run: |
-        sudo apt-get -y install libeigen3-dev python3-pytest python3-numpy python3-flake8 python3-sympy
+        sudo apt-get -y install libeigen3-dev python3-pytest python3-pytest-xdist python3-numpy python3-flake8 python3-sympy
         pwd
         wget -nc --quiet https://github.com/pybind/pybind11/archive/v2.5.0.tar.gz
         tar -xf v2.5.0.tar.gz
@@ -53,7 +53,7 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
         export PYTHONPATH=${{runner.workspace}}/build
-        python3 -m pytest test/
+        python3 -m pytest -n auto test/
 
   style-checks:
     runs-on: ubuntu-latest
