--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get -y install libeigen3-dev python3-pytest python3-pytest-xdist python3-numpy python3-flake8 python3-sympy
+        sudo apt-get -y install libeigen3-dev ninja-build python3-pytest python3-pytest-xdist python3-numpy python3-flake8 python3-sympy
         pwd
         wget -nc --quiet https://github.com/pybind/pybind11/archive/v2.5.0.tar.gz
         tar -xf v2.5.0.tar.gz
@@ -39,7 +39,7 @@ jobs:
       # Note the current convention is to use the -S and -B options here to specify source
       # and build directories, but this is only available with CMake 3.13 and higher.
       # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: pwd && cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE $GITHUB_WORKSPACE/cpp
+      run: cmake -G Ninja -DCMAKE_BUILD_TYPE=$BUILD_TYPE $GITHUB_WORKSPACE/cpp
 
     - name: Build
       working-directory: ${{runner.workspace}}/build
@@ -56,7 +56,7 @@ jobs:
         python3 -m pytest -n auto test/
 
   style-checks:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Install flake8
