--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools>=42", "wheel", "pybind11~=2.6.0", "cmake", "scikit-build"]
+requires = ["setuptools>=42", "wheel", "pybind11~=2.6.0", "cmake", "scikit-build", "ninja"]
 build-backend = "setuptools.build_meta"
