Some fixes on MacOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.18)
 
 project(libtab VERSION "0.0.1")
 
@@ -8,13 +8,28 @@ include(GNUInstallDirs)
 # Currently, Scikit-build does not support FindPython, so we convert the
 # provided hints ourselves.
 if(SKBUILD)
-  set(Python_EXECUTABLE "${PYTHON_EXECUTABLE}")
-  set(Python_INCLUDE_DIR "${PYTHON_INCLUDE_DIR}")
-  set(Python_LIBRARY "${PYTHON_LIBRARY}")
+   set(Python_EXECUTABLE "${PYTHON_EXECUTABLE}")
+   set(Python_INCLUDE_DIR "${PYTHON_INCLUDE_DIR}")
+   set(Python_LIBRARY "${PYTHON_LIBRARY}")
 endif()
 
 set(Python_FIND_IMPLEMENTATIONS CPython PyPy)
 find_package(Python REQUIRED COMPONENTS Interpreter Development)
+
+# Set C++ standard before finding pybind11
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+# Get pybind11 CMake dir
+execute_process(
+  COMMAND
+    "${Python_EXECUTABLE}" -c
+    "import pybind11; print(pybind11.get_cmake_dir())"
+  OUTPUT_VARIABLE _tmp_cmake_dir
+  OUTPUT_STRIP_TRAILING_WHITESPACE COMMAND_ECHO STDOUT ECHO_OUTPUT_VARIABLE
+  ECHO_ERROR_VARIABLE)
+list(APPEND CMAKE_PREFIX_PATH "${_tmp_cmake_dir}")
 
 find_package(Eigen3 REQUIRED)
 message(STATUS "Found Eigen ${EIGEN3_INCLUDE_DIRS}")
