go back to using cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,9 +38,9 @@ include_directories(${EIGEN3_INCLUDE_DIRS})
 # Now we can find pybind11
 find_package(pybind11 CONFIG REQUIRED)
 
-add_subdirectory(src)
+add_subdirectory(cpp)
 
-pybind11_add_module(libtab MODULE src/wrapper.cpp)
+pybind11_add_module(libtab MODULE cpp/wrapper.cpp)
 
 set_target_properties(libtab PROPERTIES SKIP_BUILD_RPATH FALSE)
 set_target_properties(libtab PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
