Add numpy and sympy for unit tests

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -41,5 +41,5 @@ jobs:
           pip install .
       - name: Run units tests
         run: |
-          pip install pytest pytest-xdist
+          pip install pytest pytest-xdist numpy sympy
           pytest -n auto test/
