--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.8]
+        os: [ubuntu-latest, macos-latest]
+        python-version: [3.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -28,11 +28,6 @@ jobs:
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
         run: brew install eigen
-      - name: Install dependencies (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          C:\msys64\usr\bin\wget.exe https://github.com/ros2/choco-packages/releases/download/2020-02-24/eigen.3.3.4.nupkg
-          choco install eigen.3.3.4.nupkg
       - name: Install dependencies (Python)
         run: |
           pip install --upgrade pip
