--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Run units tests
         run: |
           pip install pytest pytest-xdist numpy sympy
-          pytest test/
+          pytest -n auto test/
