--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -43,3 +43,13 @@ jobs:
         run: |
           pip install pytest pytest-xdist numpy sympy
           pytest -n auto test/
+  cmake:
+      runs-on: ubuntu-20.04
+   steps:
+    - uses: actions/checkout@v2
+
+    - name: Install dependencies
+      run: |
+        sudo apt-get -y install cmake libeigen3-dev python3-pip
+        sudo python3 -m pip install scikit-build pybind11
+        sudo cmake --build build --target install
