try something else

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -55,5 +55,5 @@ jobs:
           sudo python3 -m pip install scikit-build pybind11
       - name: Build with cmake
         run: |
-          mkdir build
-          sudo cmake --build build --target install
+          sudo cmake .
+          sudo make -j 2 install
