--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get -y install cmake libeigen3-dev python3-pip
-          sudo python3 -m pip install scikit-build pybind11
+          sudo python3 -m pip install scikit-build pybind11 cmake
       - name: Build with cmake
         run: |
           sudo cmake .
