--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -51,9 +51,23 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get -y install cmake libeigen3-dev python3-pip
+          sudo apt-get -y install libeigen3-dev python3-pip
           sudo python3 -m pip install scikit-build pybind11 cmake
       - name: Build with cmake
         run: |
           sudo cmake .
           sudo make -j 2 install
+  
+  setup-py:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get -y install libeigen3-dev python3-pip
+          sudo python3 -m pip install scikit-build pybind11 cmake
+      - name: Build with setup.py
+        run: |
+          sudo python3 setup.py install
+          python3 -c "import libtab; print(libtab.__version__)"
