--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -9,6 +9,6 @@ if (HAVE_NO_MULTLINE)
 endif()
 
 # Executable
-add_library(tab SHARED lattice.cpp polyset.cpp dof-permutations.cpp moments.cpp lagrange.cpp libtab.cpp quadrature.cpp
-                       nedelec.cpp raviart-thomas.cpp cell.cpp regge.cpp crouzeix-raviart.cpp)
+add_library(tab SHARED lattice.cpp polyset.cpp dof-permutations.cpp moments.cpp lagrange.cpp finite-element.cpp quadrature.cpp
+                       nedelec.cpp raviart-thomas.cpp cell.cpp regge.cpp crouzeix-raviart.cpp libtab.cpp)
 target_compile_definitions(tab PRIVATE LIBTAB_VERSION=${PROJECT_VERSION})
