--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -10,5 +10,5 @@ endif()
 
 # Executable
 add_library(tab SHARED lattice.cpp polyset.cpp dof-permutations.cpp moments.cpp lagrange.cpp finite-element.cpp quadrature.cpp
-                       nedelec.cpp raviart-thomas.cpp cell.cpp regge.cpp crouzeix-raviart.cpp libtab.cpp)
+                       nedelec.cpp raviart-thomas.cpp cell.cpp regge.cpp crouzeix-raviart.cpp basix.cpp)
 target_compile_definitions(tab PRIVATE LIBTAB_VERSION=${PROJECT_VERSION})
