--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -9,6 +9,6 @@ if (HAVE_NO_MULTLINE)
 endif()
 
 # Executable
-add_library(tab SHARED lattice.cpp polyset.cpp dof-permutations.cpp moments.cpp lagrange.cpp finite-element.cpp quadrature.cpp
+add_library(basix SHARED lattice.cpp polyset.cpp dof-permutations.cpp moments.cpp lagrange.cpp finite-element.cpp quadrature.cpp
                        nedelec.cpp raviart-thomas.cpp cell.cpp regge.cpp crouzeix-raviart.cpp basix.cpp)
-target_compile_definitions(tab PRIVATE LIBTAB_VERSION=${PROJECT_VERSION})
+target_compile_definitions(basix PRIVATE BASIX_VERSION=${PROJECT_VERSION})
