remove loguru from CMakeLists

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -11,8 +11,7 @@ endif()
 # Executable
 add_library(basix SHARED lattice.cpp polyset.cpp dof-permutations.cpp
                           moments.cpp lagrange.cpp finite-element.cpp
-                          log.cpp loguru.cpp
-                          quadrature.cpp brezzi-douglas-marini.cpp
+                          log.cpp quadrature.cpp brezzi-douglas-marini.cpp
                           nedelec.cpp raviart-thomas.cpp cell.cpp qdivcurl.cpp
                           regge.cpp crouzeix-raviart.cpp basix.cpp)
 target_compile_definitions(basix PRIVATE BASIX_VERSION=${PROJECT_VERSION})
