rename to NC and RTC

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
 add_library(basix SHARED lattice.cpp polyset.cpp dof-permutations.cpp
                           moments.cpp lagrange.cpp finite-element.cpp
                           log.cpp quadrature.cpp brezzi-douglas-marini.cpp
-                          nedelec.cpp raviart-thomas.cpp cell.cpp qdivcurl.cpp
+                          nedelec.cpp raviart-thomas.cpp cell.cpp nc-rtc.cpp
                           regge.cpp crouzeix-raviart.cpp basix.cpp)
 target_compile_definitions(basix PRIVATE BASIX_VERSION=${PROJECT_VERSION})
 target_compile_definitions(basix PUBLIC EIGEN_MAX_ALIGN_BYTES=32)
