Add enum for mapping type

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 # Executable
 add_library(basix SHARED lattice.cpp polyset.cpp dof-permutations.cpp
                           moments.cpp lagrange.cpp finite-element.cpp
+                          mappings.cpp
                           quadrature.cpp brezzi-douglas-marini.cpp
                           nedelec.cpp raviart-thomas.cpp cell.cpp regge.cpp
                           crouzeix-raviart.cpp basix.cpp)
