--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get -y install libeigen3-dev python3-pip
-          python3 -m pip install scikit-build pybind11 cmake
+          sudo python3 -m pip install scikit-build pybind11 cmake
       - name: Build with setup.py
         run: |
           sudo python3 setup.py install
