--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,10 +55,12 @@ set_target_properties(_basixcpp PROPERTIES SKIP_BUILD_RPATH FALSE)
 set_target_properties(_basixcpp PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
 set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
-if (APPLE)
-  set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH "@loader_path/lib")
-else()
-  set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH "$ORIGIN/lib")
+if(SKBUILD)
+    if (APPLE)
+      set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH "@loader_path/lib")
+    else()
+      set_target_properties(_basixcpp PROPERTIES INSTALL_RPATH "$ORIGIN/lib")
+    endif()
 endif()
 
 target_link_libraries(_basixcpp PRIVATE pybind11::module basix)
