Fixes and enable docs

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -31,10 +31,7 @@ jobs:
           cd doc && doxygen
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
-        run: |
-          which c++
-          c++ -v
-          brew install eigen
+        run: brew install eigen
       - name: Install dependencies (Python)
         run: |
           pip install --upgrade pip
