Add bubble element

--- a/cpp/elements/CMakeLists.txt
+++ b/cpp/elements/CMakeLists.txt
@@ -10,6 +10,7 @@ set(HEADERS_elements
   ${CMAKE_CURRENT_SOURCE_DIR}/raviart-thomas.h
   ${CMAKE_CURRENT_SOURCE_DIR}/regge.h
   ${CMAKE_CURRENT_SOURCE_DIR}/crouzeix-raviart.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/bubble.h
   PARENT_SCOPE)
 
 set(CPP_elements
@@ -20,4 +21,5 @@ set(CPP_elements
   ${CMAKE_CURRENT_SOURCE_DIR}/raviart-thomas.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/regge.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/crouzeix-raviart.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/bubble.cpp
   PARENT_SCOPE)
