--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Run units tests
         run: |
           pip install pytest pytest-xdist numpy sympy
-          pytest -v -n auto test/
+          pytest -n auto test/
       - name: Checkout FEniCS/docs
         if: ${{ github.repository == 'FEniCS/basix' && github.ref == 'refs/heads/main' && runner.os == 'Linux' }}
         uses: actions/checkout@v2
