--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -1,6 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint
-# with a single version of Python For more information see:
-# https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+# This workflow will install Basix, FFCx, DOLFINx and run the DOLFINx unit tests.
 
 name: Run DOLFINx tests
 
@@ -11,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     container: fenicsproject/test-env:openmpi
 
-   env:
+    env:
       CC: clang-10
       CXX: clang++-10
 
@@ -24,7 +22,7 @@ jobs:
       OMPI_MCA_mpi_yield_when_idle: 1
       OMPI_MCA_hwloc_base_binding_policy: none
 
-   strategy:
+    strategy:
       matrix:
         petsc_arch: [real, complex]
         petsc_int_type: [32, 64]
@@ -40,7 +38,6 @@ jobs:
           pip install .
       - name: Install FEniCS Python components
         run: |
-          python3 -m pip install git+https://github.com/FEniCS/basix.git@mscroggs/eigen
           python3 -m pip install git+https://github.com/FEniCS/ufl.git
           python3 -m pip install git+https://github.com/FEniCS/ffcx.git
 
