--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -1,11 +1,12 @@
 # This workflow will install Basix, FFCx, DOLFINx and run the DOLFINx unit tests.
 
-name: Run DOLFINx tests
+name: Basix CI
 
 on: pull_request
 
 jobs:
   build:
+    name: Run DOLFINx tests
     runs-on: ubuntu-latest
     container: fenicsproject/test-env:openmpi
 
