* Follow basix::main directory structure.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -2,19 +2,17 @@
 # FEniCS Project
 # SPDX-License-Identifier: MIT
 
+# Note: -Wno-comment is added to avoid warning/errors for LaTeX code
+# with backslashes on Doxygen comments
 include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-Wno-comment -Wall -Werror -std=c++17" HAVE_NO_MULTLINE)
-if (HAVE_NO_MULTLINE)
-  set(CMAKE_CXX_FLAGS "-Wno-comment -Wall -Werror -std=c++17 ${CMAKE_CXX_FLAGS}")
+CHECK_CXX_COMPILER_FLAG("-Wall -Werror -Wno-comment" HAVE_EXTRA_FLAGS)
+if (HAVE_EXTRA_FLAGS)
+  set(CMAKE_CXX_FLAGS "-Wall -Werror -Wno-comment ${CMAKE_CXX_FLAGS}")
 endif()
 
-# Executable
-add_library(basix SHARED lattice.cpp polyset.cpp dof-permutations.cpp
-                          moments.cpp lagrange.cpp finite-element.cpp
-                          mappings.cpp
-                          element-families.cpp log.cpp nce-rtc.cpp
-                          quadrature.cpp brezzi-douglas-marini.cpp
-                          nedelec.cpp raviart-thomas.cpp cell.cpp regge.cpp
-                          crouzeix-raviart.cpp basix.cpp)
+include_directories(${CMAKE_CURRENT_LIST_DIR})
+
+add_subdirectory(core)
+add_subdirectory(elements)
+add_library(basix SHARED basix.cpp ${CPP_elements} ${CPP_core})
 target_compile_definitions(basix PRIVATE BASIX_VERSION=${PROJECT_VERSION})
-target_compile_definitions(basix PUBLIC EIGEN_MAX_ALIGN_BYTES=32)
