--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -25,14 +25,14 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libeigen3-dev doxygen
+          sudo apt-get install -y doxygen libeigen3-dev xtensor-dev
       - name: Build documentation (Linux)
         if: runner.os == 'Linux'
         run: |
           cd doc && doxygen
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
-        run: brew install eigen
+        run: brew install eigen xtensor
       - name: Install dependencies (Python)
         run: |
           pip install --upgrade pip
