--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y doxygen libeigen3-dev
-          wget https://github.com/xtensor-stack/xtl/archive/0.7.2.tar.gz -0 xtl-0.7.2.tar.gz
+          wget https://github.com/xtensor-stack/xtl/archive/0.7.2.tar.gz -o xtl-0.7.2.tar.gz
           tar xf xtl-0.7.2.tar.gz
           cd xtl-0.7.2
           cmake .
