--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -30,13 +30,13 @@ jobs:
           tar xf xtl-0.7.2.tar.gz
           cd xtl-0.7.2
           cmake .
-          cmake install
+          sudo cmake install
           cd ../
           wget https://github.com/xtensor-stack/xtensor/archive/0.23.1.tar.gz -O xtensor-0.23.1.tar.gz
           tar xf xtensor-0.23.1.tar.gz
           cd xtensor-0.23.1
           cmake .
-          cmake install
+          sudo cmake install
       - name: Build documentation (Linux)
         if: runner.os == 'Linux'
         run: |
