--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -81,31 +81,31 @@ jobs:
           git commit --allow-empty -m "C++ FEniCS/basix@${{ github.sha }}"
           git push
 
-  cmake:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
+  # cmake:
+  #   runs-on: ubuntu-20.04
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get -y install libeigen3-dev python3-pip
-          sudo python3 -m pip install scikit-build pybind11 cmake
-      - name: Build with cmake
-        run: |
-          cmake .
-          make -j 2
-          sudo make install
+  #     - name: Install dependencies
+  #       run: |
+  #         sudo apt-get -y install libeigen3-dev python3-pip
+  #         sudo python3 -m pip install scikit-build pybind11 cmake
+  #     - name: Build with cmake
+  #       run: |
+  #         cmake .
+  #         make -j 2
+  #         sudo make install
 
-  setup-py:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
+  # setup-py:
+  #   runs-on: ubuntu-20.04
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get -y install libeigen3-dev python3-pip
-          sudo python3 -m pip install scikit-build pybind11 cmake
-      - name: Build with setup.py
-        run: |
-          sudo python3 setup.py install
-          python3 -c "import basix; print(basix.__version__)"
+  #     - name: Install dependencies
+  #       run: |
+  #         sudo apt-get -y install libeigen3-dev python3-pip
+  #         sudo python3 -m pip install scikit-build pybind11 cmake
+  #     - name: Build with setup.py
+  #       run: |
+  #         sudo python3 setup.py install
+  #         python3 -c "import basix; print(basix.__version__)"
