--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -28,9 +28,13 @@ jobs:
           sudo apt-get install -y doxygen libeigen3-dev
           wget https://github.com/xtensor-stack/xtl/archive/0.7.2.tar.gz -O xtl-0.7.2.tar.gz
           tar xf xtl-0.7.2.tar.gz
+          # mkdir build-xtl
+          # cd build-xtl
+          # cmake ../xtl-0.7.2.
+          # echo "Finished confi"
           cmake -B build-xtl -S xtl-0.7.2
           # cmake --build xtl-0.7.2
-          cmake --install xtl-0.7.2
+          sudo cmake --install xtl-0.7.2
 
           # cd xtl-0.7.2
           # mkdir build-xtl && cd build && cmake ../ && sudo cmake install
