--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -29,7 +29,7 @@ jobs:
           wget https://github.com/xtensor-stack/xtl/archive/0.7.2.tar.gz -O xtl-0.7.2.tar.gz
           tar xf xtl-0.7.2.tar.gz
           cmake -B build-xlt -S xtl-0.7.2/
-          cmake --install build-xlt
+          sudo cmake --install build-xlt
 
           # ls
           # mkdir build-xtl
